--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "e2e": "ng e2e",
     "docs:json": "compodoc -p ./tsconfig.json -e json -d .",
     "storybook": "npm run docs:json && start-storybook -p 6006",
-    "build-storybook": "npm run docs:json && build-storybook"
+    "build-storybook": "npm run docs:json && build-storybook",
+    "deploy-storybook": "storybook-to-ghpages"
   },
   "private": true,
   "dependencies": {
@@ -38,6 +39,7 @@
     "@storybook/addon-links": "^6.3.8",
     "@storybook/angular": "^6.3.8",
     "@storybook/cli": "^6.3.8",
+    "@storybook/storybook-deployer": "^2.8.10",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "@webcomponents/custom-elements": "^1.5.0",
